[tool.poetry]
name = "WhatsappApiClient"
version = "0.10.1"
description = "Whatsapp API client"
authors = ["a5r0n <a5r0n@users.noreply.github.com>"]
packages = [{ include = "whatsapp" }]
[tool.poetry.dependencies]
python = "^3.7"
driconfig = "^0.2.0"
aiohttp = "^3.8.5"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^21.12b0", allow-prereleases = true}
pytest-asyncio = "^0.18.3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.10.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "whatsapp/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
